Added Manage Products and Edit products

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
     "**/.client/**/*.tsx"
-  ],
+, "app/routes/manage-products/new.jsx", "app/routes/manage-products/edit.$id.jsx"  ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": ["@remix-run/node", "vite/client"],
