--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "test": "vitest run"
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
+    "@remix-run/router": "^1.22.0",
     "@remix-run/serve": "^2.15.2",
     "devextreme": "^24.2.3",
     "devextreme-react": "^24.2.3",
@@ -24,6 +26,8 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@remix-run/dev": "^2.15.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/node": "^22.12.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -37,6 +41,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^15.14.0",
+    "jsdom": "^26.0.0",
     "postcss": "^8.4.38",
     "prisma": "^6.3.0",
     "tailwindcss": "^3.4.17",
@@ -45,7 +50,8 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^3.0.5"
   },
   "engines": {
     "node": ">=20.0.0"
