--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "**/.client/**/*.tsx"
 , "app/routes/manage-products/new.jsx", "app/routes/manage-products/edit.$id.jsx"  ],
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["@remix-run/node", "vite/client"],
+"lib": ["DOM", "DOM.Iterable", "ES2022"],
+    "types": ["@remix-run/node", "vite/client", "vitest/globals"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -21,9 +21,9 @@
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "noImplicitAny":true,
-    "strictNullChecks":true,
-    "strictFunctionTypes":true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
