--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,21 @@
     "**/.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
-    "**/.client/**/*.tsx"
-, "app/routes/manage-products/new.jsx", "app/routes/manage-products/edit.$id.jsx"  ],
+    "**/.client/**/*.tsx",
+    "app/routes/manage-products/new.jsx",
+    "app/routes/manage-products/edit.$id.jsx"
+  ],
   "compilerOptions": {
-"lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["@remix-run/node", "vite/client", "vitest/globals"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES2022"
+    ],
+    "types": [
+      "@remix-run/node",
+      "vite/client",
+      "vitest/globals"
+    ],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -26,9 +36,10 @@
     "strictFunctionTypes": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": [
+        "./app/*"
+      ]
     },
-
     // Vite takes care of building everything, not tsc.
     "noEmit": true
   }
