--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "remix": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
