--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "devextreme": "^24.2.3",
     "devextreme-react": "^24.2.3",
     "isbot": "^4.1.0",
+    "oauth-1.0a": "^2.2.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "strip-html": "^1.0.2",
+    "striptags": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -45,6 +48,7 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0",
     "vite": "^5.1.0",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
